--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -15,15 +15,20 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- google map -->
+    <script src="lib/webcomponentsjs/webcomponents.min.js"></script>
+    <link rel="import" href="lib/google-map/google-map.html">
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
+    <script src="js/services.js"></script>
+</head>
 
-  <body ng-app="starter">
+<body ng-app="AlkoFinder">
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
 </html>
