--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,11 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <!-- controllers -->
+    <script src="js/controllers/map.js"></script>
+    <script src="js/controllers/store-list.js"></script>
+
 </head>
 
 <body ng-app="AlkoFinder">
