--- a/www/index.html
+++ b/www/index.html
@@ -24,12 +24,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
 
     <!-- controllers -->
     <script src="js/controllers/map.js"></script>
     <script src="js/controllers/store-list.js"></script>
+
+    <!-- services -->
+    <script src="js/services/stores.js"></script>
 
 </head>
 
