include lodash script

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,9 @@
     <script src="lib/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="lib/google-map/google-map.html">
 
+    <!-- lib -->
+    <script src="lib/lodash/lodash.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
