--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
 
     <!-- services -->
     <script src="js/services/stores.js"></script>
+    <script src="js/services/map.js"></script>
 
 </head>
 
